--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,7 +11,9 @@
  * file per style scope.
  *
  *= require_tree .
+ *= require_navbar .
  *= require_self
  */
 
+@import "compass";
 @import "bootstrap";
