--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -2,7 +2,7 @@
   margin: 20px;
   
   .side-container {
-    background-color: grey;
+    background-color: #80CCFF;
     min-height: 375px;
     margin: 5px;
     margin-left: 0px;
