--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -1,14 +1,14 @@
 #main-container {
   margin: 20px;
+  padding: 10px;
+  margin-left: 50px;
   
   .side-container {
     background-color: #80CCFF;
     min-height: 375px;
-    margin: 5px;
-    margin-left: 0px;
 
     .side {
-      margin: 5px;
+
     }
 
   }
@@ -16,8 +16,6 @@
   #main-content {
     background-color: #E7E7E7;
     min-height: 375px;
-    margin-right: -25px;
-    margin-top: 5px;
   }
 
 }
