--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,3 +1,12 @@
-    <div style="color:red">
+<div class="row">
+  <div class="col-lg-12">
+    <div class="side-head">
       Sidebar
     </div>
+    <% if current_user.present? %>
+      <h5> Hello, <%= current_user.name %> </h5>
+    <% else %>
+      <%= render "devise/sessions/form" %>
+    <% end %>
+  </div>
+</div>
