--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -3,8 +3,22 @@
     <div class="side-head">
       Sidebar
     </div>
+
     <% if current_user.present? %>
-      <h5> Hello, <%= current_user.name %> </h5>
+
+      <div class="row">
+        <div class="col-lg-12">
+          <h5> <%= current_user.company_name %> </h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="side-foot">
+            <%= link_to "Logout", destroy_user_session_path, data: {method: :delete} %>
+          </div>
+        </div>
+      </div>
+
     <% else %>
       <%= render "devise/sessions/form" %>
     <% end %>
