--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,9 @@
 
         <li><%= link_to "link", "#", class: "active" %></li>
         <li><a href="#">Link</a></li>
+      </ul>
 
+      <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <%= link_to "#", class: "dropdown-toggle", data: { toggle: "dropdown"} do %>
             Dropdown <span class="caret"></span>
@@ -29,8 +31,8 @@
 
           </ul>
         </li>
-
       </ul>
+
     </div>
 
   </div>
