--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,14 +24,14 @@
 
           <div class="row">
 
-            <div class="col-lg-9">
+            <div class="col-sm-9">
               <div id="main-content">
                 <%= yield %>
               </div>
             </div>
 
             <% if !@hide_sidebar %>
-              <div class="col-lg-3">
+              <div class="col-sm-3">
                 <div class="side-container">
                   <div class="side">
                     <%= render partial: "layouts/sidebar" %>
