--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -14,6 +14,14 @@
         margin: 1px;
         color: red;
       }
+
+      .side-main {
+        min-height: 300px;
+      }
+
+      .side-foot {
+
+      }
     }
 
   }
