--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -8,19 +8,21 @@
 
       <div class="row">
         <div class="col-lg-12">
-          <h5> <%= current_user.company_name %> </h5>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="side-foot">
-            <%= link_to "Logout", destroy_user_session_path, data: {method: :delete} %>
+          <div class="side-main">
+            <h5> <%= current_user.company_name %> </h5>
           </div>
         </div>
       </div>
-
     <% else %>
       <%= render "devise/sessions/form" %>
     <% end %>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-12">
+    <div class="side-foot">
+      <%= link_to "Sign Out", destroy_user_session_path, data: {method: :delete} %>
+    </div>
   </div>
 </div>
