--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,14 +8,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button> -->
-      <a class="navbar-brand" href="#"><p class="style-text">Sweep-A-Lot</p></a>
+      <a class="navbar-brand" href="/"><p class="style-text">Sweep-A-Lot</p></a>
     </div>
     
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
 
         <li><%= link_to "About", "#", class: "active" %></li>
-        <li><%= link_to "Home", "#", class: "active" %></li>
+        <li><%= link_to "Trucks", trucks_path, class: "active" %></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
@@ -38,8 +38,8 @@
         <% else %>
 
           <ul class="nav navbar-nav">
-            <li><%= link_to "Signin", "#", class: "active" %></li>
-            <li><%= link_to "Signup", "#", class: "active" %></li>
+            <li><%= link_to "Sign In", new_user_session_path, class: "active" %></li>
+            <li><%= link_to "Sign Up", new_user_registration_path, class: "active" %></li>
           </ul>
 
         <% end %>
