--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,8 @@
           <%= render "layouts/navbar" %>
           <!-- Navbar end -->
 
-          <div class="row">
+          <% if !@hide_sidebar %>
+            <div class="row">
 
             <div class="col-sm-9">
               <div id="main-content">
@@ -30,7 +31,6 @@
               </div>
             </div>
 
-            <% if !@hide_sidebar %>
               <div class="col-sm-3">
                 <div class="side-container">
                   <div class="side">
@@ -39,9 +39,18 @@
                   </div>
                 </div>
               </div>
-            <% end %>
 
-          </div>
+            </div>
+          <% else %>
+            <div class="row">
+              <div class="col-sm-12">
+                <div id="main-content">
+                  <%= yield %>
+                </div>
+              </div>
+            </div>
+
+          <% end %>
 
         </div>
       </div>
