--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
 
-        <li><%= link_to "About", "#", class: "active" %></li>
+        <li><%= link_to "About", about_path, class: "active" %></li>
         <li><%= link_to "Trucks", trucks_path, class: "active" %></li>
       </ul>
 
