--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,6 +16,11 @@
 
         <li><%= link_to "About", about_path, class: "active" %></li>
         <li><%= link_to "Trucks", trucks_path, class: "active" %></li>
+        <% if current_user %>
+          <li><%= link_to "Schedule A Truck", new_user_reservation_path(current_user, @reservation), class: "active" %></li>
+        <% else%>
+          <li><%= link_to "Schedule A Truck", new_user_registration_path, class: "active" %></li>
+        <% end %>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
