--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -10,6 +10,7 @@
         <div class="col-lg-12">
           <div class="side-main">
             <h5> <%= current_user.company_name %> </h5>
+            <%= render "reservations/form" %>
           </div>
         </div>
       </div>
