--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
   <%= csrf_meta_tags %>
 </head>
   <body>
+    <% if !current_user %>
+      <% @hide_sidebar = true %>
+    <% end %>
     <div class="row">
       <div class="col-lg-12">
         <div id="main-container">
