--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-12">
     <div class="side-head">
-      Sidebar
+      Schedule A Truck
     </div>
 
     <% if current_user.present? %>
