add search and add date selector to search

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,7 +4,7 @@
   </br>
   <em>Keeping</em> a clean and save environment for them not only presents a good company image,
   but better work surroundings
-  We can Help you achieve this throug clean parking logs, work areas, and also hazard free winter environments.
+  We can Help you achieve this through clean parking lots, work areas, and also hazard free winter environments.
   Present your company as it should be, clean and save!
   We can help!
 </div>
