--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,1 +1,9 @@
-<%= render "reservations/form" %>
+<div>
+  <%= render "reservations/form" %>
+</div>
+<div>
+  <%= render "reservations/reservation_search" %>
+</div>
+<div class= "reservations">
+  <%= render "reservations/reservations" %>
+</div>
