--- a/app/views/reservations/_reservation_search.html.erb
+++ b/app/views/reservations/_reservation_search.html.erb
@@ -1,7 +1,7 @@
 <div id="search">
   <%= form_tag new_user_reservation_path(current_user), method: :get, remote: true  do %>
     <div style="color:red">
-      Search by name, or description</br>
+      Check the date you wish to scedule, to see whats available</br>
       <%= text_field_tag :date_search, params[:date_search], data: {provide: "datepicker"} %>
       <%= submit_tag "Search", :name => nil %>
     </div>
