--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,3 +1,6 @@
 <div class="reservations">
   <%= render "reservations/reservations" %>
 </div>
+<div>
+  <%= render "reservations/calendar" %>
+</div>
