--- a/app/views/reservations/_calendar.html.erb
+++ b/app/views/reservations/_calendar.html.erb
@@ -2,17 +2,23 @@
   <table class="table">
     <thead>
       <tr>
-        <th class="col-md-3">Time</th>
-        <th class="col-md-3">Date</th>
-        <th class="col-md-3">Amount</th>
-        <th class="col-md-3">Status</th>
+        <th class="col-md-4"><%= res.user.company_name %></th>
+        <th class="col-md-4">Time</th>
+        <th class="col-md-4">Expected Finish Time</th>
       </tr>
     </thead>
     <tbody>
-      <% (res.start_hour.to_datetime..res.end_hour.to_datetime).each do |d| %>
+      <% (res.start_hour.to_datetime.hour..res.end_hour.to_datetime.hour).each do |d| %>
         <tr>
           <td>
-            <%= d.strftime("%I %p") %>
+            <%= res.job_type %>
+          </td>
+          <td>
+            <%#= d.strftime("%I %p") %>
+            <%= Time.parse("#{d}:00").strftime("%I %p") %>
+          </td>
+          <td>
+            <%= res.end_time %>
           </td>
         </tr>
       <% end %> 
