--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -16,8 +16,9 @@
             <div>
               <%= render "reservations/reservation_search" %>
             </div>
+            <h4><u>Schedule</u></h4>
             <div class="reservations">
-              <%= render "reservations/reservations" %>
+              <%= render "reservations/calendar" %>
             </div>
           </div>
         </div>
