Add ReservationsMailer Add civil_time helper_method

--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -6,7 +6,7 @@
   <%= f.datetime_select :schedule_date, discard_year: true, ampm: true, minute_step: 15 %>
   </br>
   <strong> How Long do you estimate this job will take?</strong>
-  <%= select_hour Time.now %>
+  <%= select_hour 01 %>
   <strong>hours</strong>
   </br>
   <%= f.submit %>
