Styling Change sidebar text messaging assets on static pages

--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -17,6 +17,10 @@
 
       .side-main {
         min-height: 300px;
+
+        .day-schedule {
+          margin: 10px;
+        }
       }
 
       .side-foot {
