--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,1 +1,7 @@
-<%= render "devise/registrations/form" %>
+<h2>Sign up, schedule a truck, and have a clean lot today!</h2>
+
+<div class="row">
+  <div class="col-sm-6">
+    <%= render "devise/registrations/form" %>
+  </div>
+</div>
