--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,10 @@
+<div class="blue-bar margin-bottom">
+  <div class="row">
+    <div class="col-sm-12">
+      <h4 class="font-center"> About Us </h4>
+    </div>
+  </div>
+</div>
 <div id="about-text">
   <strong><em>Here</em> at Sweep-A-Lot, we realize that your customers and employees are an
     integral and imprtant part of your company.</strong> </br>
@@ -8,10 +15,17 @@
   Present your company as it should be, clean and save!
   We can help!
 </div>
-  <ul class="sweep-list"><strong>We provide:</strong> 
-      <li class="indent">sweeping</li>
-      <li class="indent">snow removal and sanding</li> 
-      <li class="indent">striping</li>
-      <li class="indent">asphalt maintence and repair</li>
-      <li class="indent">power washing</li>
-  </ul>
+<div class="row">
+  <div class="col-sm-4">
+    <ul class="sweep-list"><strong>We provide:</strong> 
+        <li class="indent">sweeping</li>
+        <li class="indent">snow removal and sanding</li> 
+        <li class="indent">striping</li>
+        <li class="indent">asphalt maintence and repair</li>
+        <li class="indent">power washing</li>
+    </ul>
+  </div>
+  <div class="col-sm-8">
+    <%= image_tag "clean-lot.jpg", class: "clean-photo" %>
+  </div>
+</div>
