--- a/app/views/static_pages/trucks.html.erb
+++ b/app/views/static_pages/trucks.html.erb
@@ -1,2 +1,53 @@
-<% @hide_sidebar = false %>
-Pictures and descriptions of trucks are here. awesome, huh?
+<div class="blue-bar">
+  <div class="row">
+    <div class="col-sm-2">
+      <div class="trucks-line">
+        <%= image_tag "sweeper10.JPG", class: "img-circle li-image" %>
+      </div>
+    </div>
+    <div class="col-sm-10">
+      <div class="row">
+        <h3>Air Trucks</h3>
+      </div>
+      <div class="row">
+        Air trucks are ideal for getting that small debris and trash. 
+        These trucks are better at picking up dust than a broom truck. 
+        They are limeted to light sand and small rocks.
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="truck-list">
+    <%= image_tag "sweeper5.JPG", class: "col-sm-4" %>
+    <%= image_tag "sweeper9.JPG", class: "col-sm-4" %>
+    <%= image_tag "sweeper6.JPG", class: "col-sm-4" %>
+  </div>
+</div>
+
+<div class="blue-bar">
+  <div class="row">
+    <div class="col-sm-2">
+      <div class="trucks-line">
+        <%= image_tag "sweeper1.JPG", class: "img-circle li-image" %>
+      </div>
+    </div>
+    <div class="col-sm-10">
+      <div class="row">
+        <h3>Broom Trucks</h3>
+      </div>
+      <div class="row">
+        Broom trucks are meant for the larger debris. These trucks are more suitable
+        to mud trailings and washout than an airtruck. They also work well on road
+        sweeping. 
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="truck-list">
+    <%= image_tag "sweeper7.JPG", class: "col-sm-4" %>
+    <%= image_tag "sweeper1.JPG", class: "col-sm-4" %>
+    <%= image_tag "sweeper12.JPG", class: "col-sm-4" %>
+  </div>
+</div>
