--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
     <% if !current_user %>
       <% @hide_sidebar = true %>
     <% end %>
+
+          <div>
+            <%#= image_tag "header_image.jpg", class: "stripes-banner" %>
+          </div>
+
     <div class="row">
       <div class="col-lg-12">
         <div id="main-container">
