--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,31 @@
-Hello</br>
-mfasdfadfasdffdsafsdf</br>
-adfasdfadsfadsfa
+<div class="blue-bar">
+  <div class="row">
+    <h2 class="font-center"> Sweep A Lot </h2>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-6">
+    <div class="home-form">
+      <h4>Need a truck?</br>Sign up and schedule one now</h4>
+      <%= render "devise/registrations/form"%>
+    </div>
+    <ul class="h4"><strong><u>Contact Us</u></strong>
+        <li>Phone: 303-691-0682</li>
+        <li>Email: <%= mail_to "theajbs@msn.com" %></li>
+    </ul>
+  </div>
+
+  <div class="col-sm-6">
+    <div class="home-image">
+      <%= image_tag "little-truck.jpg"%>
+    </div>
+    <ul class="h4"><strong><u>Services</u></strong>
+        <li>Parking lot and road sweeping.</li>
+        <li>Snow removal</li>
+        <li>Striping</li>
+        <li>Power Washing</li>
+
+    </ul>
+  </div>
+</div>
