--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -5,5 +5,7 @@
   <%= render "reservations/reservation_search" %>
 </div>
 <div class= "reservations">
-  <%= render "reservations/calendar" %>
+  <div class="table-container">
+    <%= render "reservations/calendar" %>
+  </div>
 </div>
