--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -2,6 +2,9 @@
   <%= render "reservations/form" %>
 </div>
 <div>
+  <%= render "addresses/form" %>
+</div>
+<div>
   <%= render "reservations/reservation_search" %>
 </div>
 <div class="table-container">
