--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -41,7 +41,9 @@
         <%= f.label :supervisor_name, "Name" %></br>
         <%= f.text_field :supervisor_name, required: true, class: 'form-control'  %></br>
 
-      <%= f.submit "Create Reservation", class: 'btn btn-primary' %>
+        <div class="blue-btn">
+          <%= f.submit "Create Reservation", class: 'btn btn-primary' %>
+        </div>
       </div>
     </div>
 
