--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -7,3 +7,9 @@ hr {
 .center-text {
   text-align: center;
 }
+
+.reservation-form {
+  border: 4px inset #CCC8CC;
+  background-color: #B6FAD4;
+  padding: 8px;
+}
