--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="reservation-form">
   <%= form_for [@user, @reservation] do |f| %>
     <div class="row">
       <div class="col-sm-5">
