--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-sm-6">
     <div class="home-form">
-      <h4>Need a truck?</br>Sign up and schedule one now</h4>
+      <h4>Need a truck?</br>Sign up, and schedule one now.</h4>
       <%= render "devise/registrations/form"%>
     </div>
   </div>
