--- a/app/views/static_pages/trucks.html.erb
+++ b/app/views/static_pages/trucks.html.erb
@@ -12,7 +12,7 @@
       <div class="row">
         Air trucks are ideal for getting that small debris and trash. 
         These trucks are better at picking up dust than a broom truck. 
-        They are limeted to light sand and small rocks.
+        They are limited to light sand and small rocks.
       </div>
     </div>
   </div>
