--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,6 +3,27 @@
     <h2 class="font-center"> Sweep A Lot </h2>
   </div>
 </div>
+<div class="row">
+  <div class="col-sm-12">
+    <h4><u> Here at Sweep A Lot we want to make scheduling easy.</u></h4>
+    <h5>Feel free to call us anytime at <u>303-691-0682</u>,
+      or you can schedule a truck now. All you have to do is create an account,
+      and click
+      <% if current_user %> 
+        <u><%= link_to "Schedule A Truck", new_user_reservation_path(current_user) %></u>
+      <% else %>
+        <u><%= link_to "Schedule A Truck", new_user_registration_path %></u>
+      <% end %>
+      We confirm with you and, have truck scheduled right away.
+      You can also schedule us to come out and bid a recurring sweep or snowplow schedule. 
+    </h5>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-12">
+    <h5> We serve the entire Denver Metro Area </h5>
+  </div>
+</div>
 
 <div class="row">
   <div class="col-sm-6">
