--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,7 +14,7 @@
       <% else %>
         <u><%= link_to "Schedule A Truck", new_user_registration_path %></u>
       <% end %>
-      We confirm with you and, have truck scheduled right away.
+      We confirm with you and, have a truck scheduled right away.
       You can also schedule us to come out and bid a recurring sweep or snowplow schedule. 
     </h5>
   </div>
