--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,9 +10,9 @@
       or you can schedule a truck now. All you have to do is create an account,
       and click
       <% if current_user %> 
-        <u><%= link_to "Schedule A Truck", new_user_reservation_path(current_user) %></u>
+        <u><%= link_to "Schedule A Truck.", new_user_reservation_path(current_user) %></u>
       <% else %>
-        <u><%= link_to "Schedule A Truck", new_user_registration_path %></u>
+        <u><%= link_to "Schedule A Truck.", new_user_registration_path %></u>
       <% end %>
       We confirm with you and, have a truck scheduled right away.
       You can also schedule us to come out and bid a recurring sweep or snowplow schedule. 
