testing git branches

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,7 @@
 </div>
 <div class="row">
   <div class="col-sm-12">
+  <!--testing-->
     <h4><u> Here at Sweep A Lot we want to make scheduling easy.</u></h4>
     <h5>Feel free to call us anytime at <u>303-691-0682</u>,
       or you can schedule a truck now. All you have to do is create an account,
