--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -1,8 +1,4 @@
-#main-container {
-  margin: 20px;
-  padding: 10px;
-  margin-left: 50px;
-  
+#main-container {  
   .side-container {
     background-color: #D4F1FA;
     min-height: 375px;
@@ -36,4 +32,8 @@
     padding: 10px;
   }
 
+}
+
+.active{
+  background-color:red;
 }
