--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,19 +1,18 @@
 <nav class="navbar navbar-default" role="navigation"> 
-  <div class="container-fluid">
-
-    <div class="navbar-header">
+  <!--<div class="container-fluid">-->
+    <!--<div class="navbar-header">-->
     <!--  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button> -->
-      <a class="navbar-brand" href="/"><p class="style-text">Sweep-A-Lot</p></a>
-    </div>
+      <!--<a class="navbar-brand" href="/"><p class="style-text">Sweep-A-Lot</p></a>-->
+    <!--</div>-->
     
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-
+        <li><%= link_to "Home", about_path, class: "active" %></li><!--may need path to home page playing with this for nav bar reconstruction-->
         <li><%= link_to "About", about_path, class: "active" %></li>
         <li><%= link_to "Equipment", trucks_path, class: "active" %></li>
         <% if current_user %>
@@ -50,8 +49,7 @@
         <% end %>
 
       </ul>
-
     </div>
 
-  </div>
+  <!--</div>-->
 </nav>
