--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,12 @@
     <% if !current_user %>
       <% @hide_sidebar = true %>
     <% end %>
-
-          <div>
+          <!--<div>
             <%#= image_tag "header_image.jpg", class: "stripes-banner" %>
-          </div>
-
-    <div class="row">
-      <div class="col-lg-12">
+          </div>-->
+    <div class="container-fluid">
+      <div class="row">
         <div id="main-container">
-
           <!-- Navbar begin -->
           <%= render "layouts/navbar" %>
           <!-- Navbar end -->
@@ -29,7 +26,6 @@
               <%= message %>
             </div>
           <% end if !flash.blank? %>
-
 
           <% if !@hide_sidebar %>
             <div class="row">
