--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -27,13 +27,9 @@
   }
 
   #main-content {
-    background-color: #E7E7E7;
+    background-color: #f8f8f8;
     min-height: 375px;
     padding: 10px;
   }
 
-}
-
-.active{
-  background-color:red;
 }
