--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,9 +16,21 @@
  *= require_self
  */
 
+/**
+* Imports
+* ----------------------------------------------------------------------------
+*/
 @import "compass";
 @import "bootstrap";
+@import url(http://fonts.googleapis.com/css?family=Oxygen:400,700,300);
 
-html,body{// gets rid of the horizontal scroll and it was not getting applied by bootstrap
-    overflow-x: hidden; 
+html{// gets rid of the horizontal scroll and it was not getting applied by bootstrap
+    overflow-x: hidden;
+    body{
+    	background-color: #f8f8f8;
+    	.navbar{
+    		margin-bottom: 0;
+    		border-color: #f8f8f8;
+    	}
+    } 
 }
