--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,8 @@
+<div class="blue-bar">
+  <div class="row">
+    <h2 class="font-center"> Sweep A Lot </h2>
+  </div>
+</div>
 <nav class="navbar navbar-default" role="navigation"> 
   <!--<div class="container-fluid">-->
     <!--<div class="navbar-header">-->
@@ -12,7 +17,7 @@
     
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Home", about_path, class: "active" %></li><!--may need path to home page playing with this for nav bar reconstruction-->
+        <li><%= link_to "Home", about_path, class: "active" %></li><!--may need path to home page :: playing with this for nav bar reconstruction-->
         <li><%= link_to "About", about_path, class: "active" %></li>
         <li><%= link_to "Equipment", trucks_path, class: "active" %></li>
         <% if current_user %>
