--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -1,35 +1,27 @@
-/*.navbar-brand {
-  border-right: 2px solid grey;
-  background-color: #80CCFF;
-  a:hover{background-color: red;}
-}
-
-p.style-text {
-  color: black;
-}
-
-.navbar-collapse .over {
-  position: relative;
-  left: 400px;
-}
-
-.stripes-banner {
-  width: 100%;
-}
-
-.sweepSchHeader{
-  background-color: red;
-  height: 60px;
-}*/
-
-
 //just leaving this here until i figure out how to get rid of padding added by bootstrap******************************
 .navbar-collapse{
 	padding-left: 0 !important;
 }
 
 .active{
-  background-color: #f8f8f8;
+  background-color: #80CCFF;
   font-family: 'Oxygen', sans-serif;
   font-size: 16px;
+}
+
+.sweepSchLogo{
+	font-family: 'Lobster', sans-serif;
+	font-size: 58px;
+  padding-left: 30px;
+}
+
+.sweepSchNavbarWrap{
+	background-color: #80CCFF;
+}
+
+.blue-bar {
+  //padding: 5px;
+  background-color: #80CCFF;
+  height: 150px;
+  border: 1px solid #e7e7e7;
 }
