--- a/app/assets/stylesheets/trucks.css.scss
+++ b/app/assets/stylesheets/trucks.css.scss
@@ -9,23 +9,10 @@
 }
 
 .blue-bar {
-  margin-top: 30px;
-  padding: 5px;
+  //padding: 5px;
   background-color: #80CCFF;
-  border: 1px solid black;
-
-
-  .font-center {
-    text-align: center;
-  }
-
-  .blue-bar-btn {
-    margin: 3px;
-
-    .btn-primary {
-      background-color: #0F58F5;
-    }
-  }
+  height: 150px;
+  border: 1px solid #e7e7e7;
 }
 
 .blue-btn {
