--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,60 +1,60 @@
 <div class="blue-bar">
   <div class="row">
-    <h2 class="font-center"> Sweep A Lot </h2>
+    <h2 class="font-center sweepSchLogo"> Sweep-A-Lot </h2>
   </div>
-</div>
-<nav class="navbar navbar-default" role="navigation"> 
-  <!--<div class="container-fluid">-->
-    <!--<div class="navbar-header">-->
-    <!--  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button> -->
-      <!--<a class="navbar-brand" href="/"><p class="style-text">Sweep-A-Lot</p></a>-->
-    <!--</div>-->
-    
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><%= link_to "Home", about_path, class: "active" %></li><!--may need path to home page :: playing with this for nav bar reconstruction-->
-        <li><%= link_to "About", about_path, class: "active" %></li>
-        <li><%= link_to "Equipment", trucks_path, class: "active" %></li>
-        <% if current_user %>
-          <li><%= link_to "Schedule A Truck", new_user_reservation_path(current_user, @reservation), class: "active" %></li>
-        <% else%>
-          <li><%= link_to "Schedule A Truck", new_user_registration_path, class: "active" %></li>
-        <% end %>
-      </ul>
+  <nav class="navbar navbar-default" role="navigation"> 
+    <!--<div class="container-fluid">-->
+      <!--<div class="navbar-header">-->
+      <!--  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button> -->
+        <!--<a class="navbar-brand" href="/"><p class="style-text">Sweep-A-Lot</p></a>-->
+      <!--</div>-->
+      
+      <div class="collapse navbar-collapse sweepSchNavbarWrap" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><%= link_to "Home", about_path, class: "active" %></li><!--may need path to home page :: playing with this for nav bar reconstruction-->
+          <li><%= link_to "About", about_path, class: "active" %></li>
+          <li><%= link_to "Equipment", trucks_path, class: "active" %></li>
+          <% if current_user %>
+            <li><%= link_to "Schedule A Truck", new_user_reservation_path(current_user, @reservation), class: "active" %></li>
+          <% else%>
+            <li><%= link_to "Schedule A Truck", new_user_registration_path, class: "active" %></li>
+          <% end %>
+        </ul>
 
-      <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right">
 
-        <% if current_user %>
+          <% if current_user %>
 
-          <li class="dropdown">
-            <%= link_to "#", class: "dropdown-toggle", data: { toggle: "dropdown"} do %>
-              <%= current_user.company_name %> <span class="caret"></span>
-            <% end %>
-            <ul class="dropdown-menu" role="menu">
-              <li><%= link_to "Account", user_path(current_user) %></li>
-              <!-- divider -->
-              <li class="divider"></li>
-              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+            <li class="dropdown">
+              <%= link_to "#", class: "dropdown-toggle", data: { toggle: "dropdown"} do %>
+                <%= current_user.company_name %> <span class="caret"></span>
+              <% end %>
+              <ul class="dropdown-menu" role="menu">
+                <li><%= link_to "Account", user_path(current_user) %></li>
+                <!-- divider -->
+                <li class="divider"></li>
+                <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
 
+              </ul>
+            </li>
+
+          <% else %>
+
+            <ul class="nav navbar-nav">
+              <li><%= link_to "Sign In", new_user_session_path, class: "active" %></li>
+              <li><%= link_to "Sign Up", new_user_registration_path, class: "active" %></li>
             </ul>
-          </li>
 
-        <% else %>
+          <% end %>
 
-          <ul class="nav navbar-nav">
-            <li><%= link_to "Sign In", new_user_session_path, class: "active" %></li>
-            <li><%= link_to "Sign Up", new_user_registration_path, class: "active" %></li>
-          </ul>
+        </ul>
+      </div>
 
-        <% end %>
-
-      </ul>
-    </div>
-
-  <!--</div>-->
-</nav>
+    <!--</div>-->
+  </nav>
+</div>
