Finish up first round on nav bar. Starting to work my way into main content for style/restructure

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,7 +30,8 @@ html, body{// gets rid of the horizontal scroll and it was not getting applied b
     	background-color: #f8f8f8;
     	.navbar{
     		margin-bottom: 0;
-    		border-color: #80CCFF;
+    		border: none;
     	}
     } 
 }
+
