--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag 'application' %> 
   <%= csrf_meta_tags %>
-  <!--<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <!--<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> //start favicon work 
   <link rel="icon" href="/favicon.ico" type="image/x-icon">-->
 </head>
   <body>
@@ -46,7 +46,6 @@
                   </div>
                 </div>
               </div>
-
             </div>
           <% else %>
             <div class="row">
