--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-sm-12">
   <!--testing-->
-    <h4><u> Here at Sweep A Lot we want to make scheduling easy.</u></h4>
-    <h5>Feel free to call us anytime at <u>303-691-0682</u>,
+    
+    <!--<h5>Feel free to call us anytime at <u>303-691-0682</u>,
       or you can schedule a truck now. All you have to do is create an account,
       and click
       <% if current_user %> 
@@ -12,25 +12,33 @@
       <% end %>
       We confirm with you and, have a truck scheduled right away.
       You can also schedule us to come out and bid a recurring sweep or snowplow schedule. 
-    </h5>
+    </h5>-->
   </div>
 </div>
-<div class="row">
-  <div class="col-sm-12">
-    <h5> We serve the entire Denver Metro Area </h5>
+<div class=" sweepSchMainWrapper row">
+  <div class="sweepSchLeftMain col-sm-6">
+    <!--<h5> We serve the entire Denver Metro Area </h5>-->
+    <h2>We worry about it so you dont have to!</h2>
+    <div class="sweepSchSpriteGreenCheck"><a href="#"></a></div><!--green checkmark-->
+    <!--<div class="sweepSchSocialMediaWrapper"> THis does not need to be here
+      <a href="#"><div class="sweepSchSpriteFacebook"></div></a>
+      <a href="#"><div class="sweepSchSpriteTwitter"></div></a>
+      <a href="#"><div class="sweepSchSpriteGooglePlus"></div></a>
+      <a href="#"><div class="sweepSchSpriteLinkedin"></div></a>
+    </div>-->
   </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-6">
+  <div class="sweepSchRightMain col-sm-6">
     <div class="home-form">
       <h4>Need a truck?</br>Sign up, and schedule one now.</h4>
       <%= render "devise/registrations/form"%>
     </div>
   </div>
+</div>
 
-  <div class="col-sm-6">
-    <div class="row">
+<div class="row">
+
+  <!--<div class="col-sm-6">
+    <!--<div class="row">
       <%= image_tag "little-truck.jpg", class: "col-sm-11 home-image" %>
     </div>
     <ul class="h4"><strong><u><%= link_to "Services", about_path %></u></strong>
@@ -44,5 +52,5 @@
         <li>Phone: 303-691-0682</li>
         <li>Email: <%= mail_to "theajbs@msn.com" %></li>
     </ul>
-  </div>
+  </div>-->
 </div>
