--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,12 @@
 <div class="blue-bar">
   <div class="row">
     <h2 class="font-center sweepSchLogo"> Sweep-A-Lot </h2>
+    <div class="sweepSchSocialMediaWrapper">
+      <a href="#"><div class="sweepSchSpriteFacebook"></div></a>
+      <a href="#"><div class="sweepSchSpriteTwitter"></div></a>
+      <a href="#"><div class="sweepSchSpriteGooglePlus"></div></a>
+      <a href="#"><div class="sweepSchSpriteLinkedin"></div></a>
+    </div>
   </div>
   <nav class="navbar navbar-default" role="navigation"> 
     <!--<div class="container-fluid">-->
@@ -25,9 +31,7 @@
             <li><%= link_to "Schedule A Truck", new_user_registration_path, class: "active" %></li>
           <% end %>
         </ul>
-
         <ul class="nav navbar-nav navbar-right">
-
           <% if current_user %>
 
             <li class="dropdown">
@@ -45,7 +49,7 @@
 
           <% else %>
 
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav sweepSchNavBarRight">
               <li><%= link_to "Sign In", new_user_session_path, class: "active" %></li>
               <li><%= link_to "Sign Up", new_user_registration_path, class: "active" %></li>
             </ul>
